<resources>
    <string name="app_name">NotesApp</string>
    <string name="label_day_of_week">День недели:</string>
    <string name="todo">TODO</string>
    <string name="hint_title">Заголовок Заметки</string>
    <string name="hint_description">Введите текст заметки:</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="save_note">Добавить заметку</string>
    <string name="warning_fields">Все поля должны быть заполнены</string>
    <string-array name="day_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>